Date		Added
======
2010/05/26
	* Rev. 14308 Added 13.2 daily quest 'Dragon Egg collection.' [L0ne_W0lf]
2010/05/25
	* Rev. 14307 Added 13.2 a minor access 'event' for Yggdrasil Dungeon floor 2. [L0ne_W0lf]
	* Rev. 14306 Added 13.2 quests 'Midgard Ore' and 'Alfheim perfume'. [L0ne_W0lf]
2010/05/24
	* Rev. 14305 Some bug fixing :x Nothing to new today folks! Stay tuned. [L0ne_W0lf]
	- Fixed input checks in the 'Ring of Wise King' quest. (bugreport:4147)
	- Fixed some of the erros reported in the Oolnir scripts. (bugreport:4220)
	- Added Azoi's giant flywing update to not warp dead players. (bugreport:4242)
	- Fixed confusing inconsistancy in the nyd_dun mob spawn file. (bugreport:4246)
	- Fixed the Manuk field 2 monsters spawning on Manul field 1. (bugreport:4248)
2010/05/22
	* Rev. 14304 Added the warps for Brasilis, not sure how they got missed :x [L0ne_W0lf]
2010/05/20
	* Rev. 14301 Added 13.2 quest 'Two Tribes' and mob spawns for Yggdrasil Dungeon. [L0ne_W0lf]
	* Rev. 14300 Added more misc NPCs to Splendide and Manuk city files. [L0ne_W0lf]
	* Rev. 14299 Added some Brasilis basic NPCs. [L0ne_W0lf]
2010/03/23
	* Rev. 14269 Fixed a couple bugs in the episode 13.x quests. [L0ne_W0lf]
	- Fixed Half-buried Gem#1 not re-enabling. (bugreport:4129)
	- Changed missed killmonsterall to killmonster. (bugreport:4131)
2010/03/22
	* Removed unnecessary event call on a missing event. (bugreport:4140) [Paradox924X]
2010/03/13
	* Rev. 14262 More bug fixing! Lots of little things, really. [L0ne_w0lf]
	- Corrected some condition errors in quests_veins. (bugreport:4088)
	- Corrected specialeffects so they play on the right NPC. (bugreport:4090)
	- Corrected an item ID in the reward NPC in monster races. (bugreport:4092)
	- Corrected NPCs overlapping with quests in msg_boards (bugreport:4093)
	- Corrected some of the given errors in the 2007_relay quest. (bugreport:4094)
	- Corrected hideonnpc to disablenpc in ice dungeon 4 warps. (bugreport:4102)